# plane_spotter

./: .gitignore  CMakeLists.txt
config/: camera.json  config.json  coords.json
include/: camera.hpp  filters.hpp  parser.hpp  plane.hpp  spotter.hpp  utils.hpp
src/: camera.cpp  filters.cpp  main.cpp  parser.cpp  plane.cpp  spotter.cpp
tests/: test_transforms.cpp
